@@ -1,3 +1,8 @@
+2002-11-16  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03442] Re: setting form on loading
+	* form.c (preFormUpdateBuffer): ifdef MENU_SELECT
+
 2002-11-16  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03441] charset of save file
